Routing system :white_check_mark:
Clean code and organise project :white_check_mark:

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-    <head>
-        <script type="module" src="./main.js"></script>
-    </head>
-    <body>
-        <div id="root"></div>
-	</body>
+  <head>
+    <script type="module" src="./main.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:b,400,700,900"
+      rel="stylesheet"
+    />
+    <link href="./css/kohicle25/style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
